terraform-alb-vpc/main.tf
# -----------------
# VPC
# -----------------
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "my-vpc"
  }
}

# -----------------
# Subnets
# -----------------
resource "aws_subnet" "public" {
  count                   = length(var.public_subnet_cidrs)
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.public_subnet_cidrs[count.index]
  availability_zone       = var.availability_zones[count.index]
  map_public_ip_on_launch = true

  tags = {
    Name = "public-subnet-${count.index + 1}"
  }
}


# -----------------
# Internet Gateway
# -----------------
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "my-igw"
  }
}

# -----------------
# Public Route Table
# -----------------
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "public-rt"
  }
}

resource "aws_route" "public_route" {
  route_table_id         = aws_route_table.public_rt.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw.id
}

resource "aws_route_table_association" "public_assoc" {
  count          = length(aws_subnet.public)
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public_rt.id
}


# -----------------
# Security Group for ALB
# -----------------
resource "aws_security_group" "alb_sg" {
  count  = var.create_alb ? 1 : 0
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "alb-sg"
  }
}

# -----------------
# Application Load Balancer
# -----------------
resource "aws_lb" "alb" {
  count  = var.create_alb ? 1 : 0
  name               = "my-alb"
  internal           = false
  load_balancer_type = "application"
  // security_groups    = [aws_security_group.alb_sg.id]
  security_groups    = var.create_alb ? [aws_security_group.alb_sg[0].id] : []
  subnets            = aws_subnet.public[*].id

  enable_deletion_protection = false

  tags = {
    Name = "my-alb"
  }
}

# -----------------
# Target Group
# -----------------
resource "aws_lb_target_group" "tg" {
  count  = var.create_alb ? 1 : 0
  name     = "my-targets"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id

  health_check {
    path                = "/"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
    matcher             = "200"
  }

  tags = {
    Name = "my-targets"
  }
}

# -----------------
# Listener
# -----------------
resource "aws_lb_listener" "listener" {
  count  = var.create_alb ? 1 : 0
  load_balancer_arn = aws_lb.alb[0].arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.tg[0].arn
  }
}
